# VMWare-Reporter

./: .readthedocs.yml  LICENSE.txt  README.md  build.py  pyproject.toml  requirements.txt  tools.py
0-ideas/: datastore_more_info.py  specials.py
docs/: api-reference.rst  conf.py  index.md
docs/static/: notify-email@.service  vmware-reporter.service  vmware-reporter.timer
docs/static/templates/: vm_reconfigure.xlsx  vms_reconfigure.xlsx
docs/templates/: custom-module-template.rst
templates/: vms_reconfigure.xlsx
tests/: test_vim.py
vmware_reporter/: __init__.py  __main__.py  all.py  autoreport.py  client.py  cluster.py  customfield.py  customvalue.py  datastore.py  dump.py  extract.py  host.py  inspect.py  inventory.py  net.py  network.py  networking.py  perf.py  pool.py  resourcepool.py  settings.py  tag.py  utils.py  vm.py
vmware_reporter/appdata/extractions/: host.yml  vm.yml
